# project-w-mlops

./: .gitignore  .pre-commit-config.yaml  README.md  infer.py  main.py  pyproject.toml  train.py
.dvc/: config
.github/workflows/: pre-commit.yml
after/: data.py  model.py  train.py
after/conf/: config.yaml
conf/: config.yaml
conf/datasets/: dogs_vs_cats.yaml
configs/: config.yaml
configs/datasets/: dogs_vs_cats.yaml
data/: .gitignore  test.dvc  train.dvc  val.dvc
data_for_testing/: test.dvc  train.dvc  val.dvc
models/: .gitignore  example-experiment.onnx.dvc  model_cnn_norm.ckpt.dvc
pipeline/: __init__.py  infer.py  main.py  model.py  preprocessing.py  train.py  utils.py
project_w_mlops/: __init__.py  loops.py  model.py  utils.py
