[tool.poetry]
name = "project-tools"
version = "0.1.0"
description = "Here are dependencies for ml project"
authors = ["Anastasia <kalashnikova040800@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
torch = "^2.1.1"
pandas = "^1.5.0"
matplotlib = "^3.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
